# Generative-AI-Learning-Path-From-Fundamentals-to-Advanced-Applications

./: LICENSE  README.md
01_AI_Essentials/: Readme.md
01_Python_basics_A_to_Z/: 01_A_smarter_way_to_learn_python.ipynb  02_modern_python.ipynb  utils.py
02_streamlit/01_streamlit_hello_world/: 01_hello_world.py
02_streamlit/02_basics/: 01_basics.py
02_streamlit/02_magic/: readme.md
02_streamlit/03_bmi_calculator/: 01_bmi_calculator.py
02_streamlit/04_layout/: 03_progress_bar.py
02_streamlit/04_multipages_app/: hello.py
02_streamlit/05_session_state/: 2_counter_callbacks.py  readme.md
02_streamlit/13_openai_assistants_project/: readme.md
03_everything_is_an_api/01_requests/: 01_requests.ipynb  02_requests.ipynb
03_everything_is_an_api/02_pydantic/: 01_pydantic.ipynb
03_streamlit/03_widgets/: 01_widgets.py  (+1 more)
04_API/: requests.ipynb
04_everything_is_an_api/: readme.md  requests.ipynb
04_microservices_all_in_one_platform/10_poetry_project/farhan_poetry_project/: README.md  pyproject.toml
04_microservices_all_in_one_platform/10_poetry_project/farhan_poetry_project/src/: readme.md
04_microservices_all_in_one_platform/10_poetry_project/farhan_poetry_project/src/farhan_poetry_project/: main.py
04_microservices_all_in_one_platform/10_poetry_project/farhan_poetry_project/tests/: test_myproject.py
04_microservices_all_in_one_platform/11_docker/04_docker_compose/docker_compose/: Dockerfile.dev  README.md  compose.yaml  pyproject.toml
04_microservices_all_in_one_platform/11_docker/04_docker_compose/docker_compose/src/docker_compose/: main.py
04_microservices_all_in_one_platform/11_docker/05_multi_container_in_docker_compose/multi_container_docker_compose/: .env.dev  Dockerfile.dev  README.md  pyproject.toml
04_microservices_all_in_one_platform/11_docker/05_multi_container_in_docker_compose/multi_container_docker_compose/src/multi_container_docker_compose/: crud.py  database.py  main.py  models.py  schemas.py
09_streamlit_genai_projects/: readme.md
(+104 files in other folders)
