[project]
name = "farhan-poetry-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Muhammad Farhan Aslam",email = "farhanmehar422538@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)"
]

[tool.poetry]
packages = [{include = "farhan_poetry_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
